# KOS-Organism

./: .dockerignore  .gitignore  Dockerfile  README.md  SYSTEM.md  Start_KOS.bat  benchmark_meta.py  benchmark_results.txt  benchmark_vsa.py  diagnose_failures.py  docker-compose.yml  dream_queue.json  kos_daemon.py  organism_api.py  requirements.txt  run_benchmark.py  server_log.txt  test_60q.py  test_all_stages.py  test_arc_real.py  test_genesis.py  test_induction.py  test_kernel_v10.py  test_kos_singularity.py  test_masking.py  test_meta_learner.py  test_singularity.py  test_universal_agi.py
.claude/: launch.json
kos/: __init__.py  active_inference.py  autogenesis.py  autonomous_ouroboros.py  bayesian_router.py  brain.py  connect_pairs_engine.py  counterfactual.py  do_calculus.py  dream_mode.py  drive_engine.py  dsl_engine.py  dsl_search.py  dynamic_grammar.py  dynamic_physics_v1.py  dynamic_physics_v2.py  flood_engine.py  four_dim_vsa.py  fractal_solver.py  fractal_vsa.py  genesis.py  genesis_engine.py  genetic_vocabulary.json  gestalt_extractor.py  gestalt_hierarchy.py  graph_ast_swarm.py  graph_swarm.py  graph_transducer.py  graph_transformer.py  gravity_drop_engine.py  grid_partition.py  grid_primitives.py  grid_swarm.py  hd_raycaster.py  interior_fill_engine.py  line_engine.py  md_engine.py  meta_compiler.py  meta_learner.py  mirror_fold_engine.py  (+25 more)
kos_rust/: Cargo.toml  __init__.py  pyproject.toml
kos_rust/src/: lib.rs
phase2/: __init__.py  constraints.py  fitness.py  generator.py  object_graph.py  perception.py  promotion.py  solve_phase2.py  types.py
(+122 files in other folders)
