[package]
name = "kos_rust"
version = "9.0.0"
edition = "2021"
description = "KOS-Organism: 60Hz Thermodynamic Spreading Activation Engine"

[lib]
name = "kos_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.9"
rand_chacha = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
